Add API to fetch OPD of the encounter
