# openapi/oh.yaml
@@ -5848,6 +5848,28 @@ paths:
                   $ref: "#/components/schemas/EncounterDTO"
       security:
       - bearerAuth: []
+  /encounters/{code}/opds:
+    get:
+      tags:
+      - Encounter
+      operationId: getOPDByEncounter
+      parameters:
+      - name: code
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/OpdDTO"
+      security:
+      - bearerAuth: []
   /encounters/current/{patientId}:
     get:
       tags:
@@ -6756,13 +6778,13 @@ components:
           format: int32
           description: lock
           example: 0
-        male:
-          type: boolean
-        pharmacy:
+        opd:
           type: boolean
         female:
           type: boolean
-        opd:
+        male:
+          type: boolean
+        pharmacy:
           type: boolean
       required:
       - beds
@@ -7617,11 +7639,11 @@ components:
           type: string
           description: "Flag record deleted, values are 'Y' OR 'N' "
           example: "N"
-        fhu:
-          type: string
         yprog:
           type: integer
           format: int32
+        fhu:
+          type: string
       required:
       - admDate
       - admitted
